@@ -123,18 +123,14 @@ void MainApplication::systemColorChanged()
     // intential race on Linux so that both approaches work (typically won by styleHint() signal
     // if it ever gets properly generated
     m_PaletteChangeTimer->stop();
-    bool theme_changed = false;
     bool isdark = qApp->palette().color(QPalette::Active,QPalette::WindowText).lightness() > 128;
     DBG qDebug() << "reached systemColorChanged with m_isDark: " << m_isDark;
     DBG qDebug() << "    and current palette test isdark: " << isdark;
     
 #if QT_VERSION < QT_VERSION_CHECK(6,5,0) || (!defined(Q_OS_WIN32) && !defined(Q_OS_MAC))
-    // in reality we really should not care if light or dark, just that theme changed
+    // in reality we really should not care if light or dark, just that palette changed
     // but this is where we are at now
-    if (isdark != m_isDark) {
-        m_isDark = isdark;
-        theme_changed = true;
-    }
+    m_isDark = isdark;
 
 #else  // Qt >= 6.5 and not Linux till it gets more robust
 
@@ -143,7 +139,6 @@ void MainApplication::systemColorChanged()
         case Qt::ColorScheme::Light:
             DBG qDebug() << "System Changed to Light Theme";
             m_isDark = false;
-            theme_changed = true;
             
 #ifdef Q_OS_WIN32
             windowsLightThemeChange();
@@ -155,16 +150,12 @@ void MainApplication::systemColorChanged()
             DBG qDebug() << "System Changed to Unknown Theme";
 	    // This is typical needed for all linux where Qt can not properly
 	    // identify the theme being used
-            if (isdark != m_isDark) {
-                m_isDark = isdark;
-                theme_changed = true;
-            }
+            m_isDark = isdark;
             break;
 
         case Qt::ColorScheme::Dark:
             DBG qDebug() << "System Changed to Dark Theme";
             m_isDark = true;
-            theme_changed = true;
 
 #ifdef Q_OS_WIN32
             windowsDarkThemeChange();
@@ -175,7 +166,7 @@ void MainApplication::systemColorChanged()
     
 #endif // Qt Version Check
     
-    if (theme_changed) QTimer::singleShot(0, this, SLOT(EmitPaletteChanged()));
+    QTimer::singleShot(0, this, SLOT(EmitPaletteChanged()));
 
 }
 
